# bork

./: .coafile  .coveragerc  AUTHORS  LICENSE  MANIFEST.in  README.rst  README_WINDOWS.rst  SECURITY.md  Vagrantfile  conftest.py  pyproject.toml  setup.cfg  setup.py  setup_docs.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE
docs/: Makefile  book.rst  changes.rst  changes_0.x.rst  changes_1.x.rst  conf.py  development.rst  faq.rst  global.rst.inc  index.rst  installation.rst  internals.rst  man_intro.rst  quickstart.rst  quickstart_example.rst.inc  support.rst  usage.rst
docs/bork_theme/css/: bork.css
docs/deployment/: automated-local.rst  central-backup-server.rst  hosting-repositories.rst  image-backup.rst  pull-backup.rst
docs/internals/: data-structures.rst  frontends.rst  security.rst
docs/man/: borg-match-archives.1  borg-rcompress.1  bork-benchmark-cpu.1  bork-benchmark-crud.1  bork-benchmark.1  bork-break-lock.1  bork-change-passphrase.1  bork-check.1  bork-common.1  bork-compact.1  bork-compression.1  bork-config.1  bork-create.1  bork-delete.1  bork-diff.1  bork-export-tar.1  bork-extract.1  bork-import-tar.1  bork-info.1  bork-key-change-algorithm.1  bork-key-change-location.1  bork-key-change-passphrase.1  bork-key-export.1  bork-key-import.1  bork-key-migrate-to-repokey.1  bork-key.1  bork-list.1  bork-mount.1  bork-patterns.1  bork-placeholders.1  bork-prune.1  bork-rcreate.1  bork-rdelete.1  bork-recreate.1  bork-rename.1  bork-rinfo.1  bork-rlist.1  bork-serve.1  bork-transfer.1  bork-umount.1  (+4 more)
docs/misc/: benchmark-crud.txt  create_chunker-params.txt  internals-picture.txt  logging.conf  prune-example.txt
docs/misc/asciinema/: Vagrantfile  advanced.json  advanced.tcl  basic.json  basic.tcl  install.json  install.tcl
docs/usage/: benchmark_cpu.rst.inc  benchmark_crud.rst.inc  borkfs.rst  borkfs.rst.inc  break-lock.rst.inc  change-passphrase.rst.inc  check.rst.inc  common-options.rst.inc  compact.rst  compact.rst.inc  config.rst  config.rst.inc  create.rst  create.rst.inc  debug.rst  delete.rst  delete.rst.inc  diff.rst  diff.rst.inc  export-tar.rst.inc  extract.rst  extract.rst.inc  general.rst  help.rst.inc  import-tar.rst.inc  info.rst  info.rst.inc  key.rst  key_change-algorithm.rst.inc  key_change-location.rst.inc  key_change-passphrase.rst.inc  key_export.rst.inc  key_import.rst.inc  list.rst  list.rst.inc  mount.rst  mount.rst.inc  notes.rst  prune.rst  prune.rst.inc  (+21 more)
docs/usage/general/: environment.rst.inc  file-metadata.rst.inc  file-systems.rst.inc  logging.rst.inc  positional-arguments.rst.inc  repository-locations.rst.inc  repository-urls.rst.inc  resources.rst.inc  return-codes.rst.inc  units.rst.inc
scripts/: bork.exe.spec  errorlist.py  hash_sizes.py  msys2-build  sdist-sign  sign-binaries  upload-pypi
scripts/fuzz-cache-sync/: main.c
scripts/make-testdata/: test_transfer_upgrade.sh
scripts/shell_completions/bash/: bork
scripts/shell_completions/fish/: bork.fish
scripts/shell_completions/zsh/: _bork
src/bork/: __init__.py  __main__.py  _endian.h  _hashindex.c  archive.py  cache.py  checksums.pyx  chunker.pyx  compress.pyx  constants.py  fuse.py  fuse_impl.py  hashindex.pyx  item.pyx  logger.py  manifest.py  paperkey.html  remote.py  repository.py  selftest.py  upgrade.py  xattr.py
src/bork/archiver/: __init__.py  _common.py  benchmark_cmd.py  check_cmd.py  compact_cmd.py  config_cmd.py  create_cmd.py  debug_cmd.py  delete_cmd.py  diff_cmd.py  extract_cmd.py  help_cmd.py  key_cmds.py  list_cmd.py  lock_cmds.py  mount_cmds.py  prune_cmd.py  rcompress_cmd.py  rcreate_cmd.py  rdelete_cmd.py  recreate_cmd.py  rlist_cmd.py  serve_cmd.py  tar_cmds.py  transfer_cmd.py
src/bork/cache_sync/: cache_sync.c  unpack.h
src/bork/crypto/: file_integrity.py  key.py  keymanager.py  low_level.pyx  nonces.py
src/bork/helpers/: __init__.py  checks.py  fs.py  misc.py  msgpack.py  parseformat.py  passphrase.py  process.py  progress.py  time.py  yes_no.py
src/bork/platform/: base.py  freebsd.pyx
src/bork/testsuite/: __init__.py  archive.py  benchmark.py  cache.py  chunker.py  crypto.py  hashindex.py  hashindex_pytest.py  helpers.py  key.py  logger.py  platform.py  platform_posix.py  remote.py  repoobj.py  repository.py
src/bork/testsuite/archiver/: __init__.py  argparsing.py  benchmark_cmd.py  check_cmd.py  checks.py  config_cmd.py  corruption.py  create_cmd.py  debug_cmds.py  delete_cmd.py  diff_cmd.py  disk_full.py  extract_cmd.py  help_cmd.py  info_cmd.py  key_cmds.py  list_cmd.py  lock_cmds.py  mount_cmds.py  prune_cmd.py  rcreate_cmd.py  rdelete_cmd.py  recreate_cmd.py  rename_cmd.py  rinfo_cmd.py  rlist_cmd.py  serve_cmd.py  tar_cmds.py  transfer_cmd.py
